--- a/Z603/index.html
+++ b/Z603/index.html
@@ -6,8 +6,9 @@ title: ILS-Z603, Spring 2022
 	<ul class="posts">
 	    <li>2022-01-13: Class 1
         <ul>
-          <li><a href="/Z656/github-pages.html" title="GitHub Pages Code Snippets">GitHub Pages Code Snippets</a></li>
-	  <li><a href="/Z603/hw1.html" title="Creating well-formed XML documents">Homework 1: Creating well-formed XML documents</a></li>
+          <li>In-Class Exercise 1a: GitHub Pages <a href="/Z656/github-pages.html" title="GitHub Pages Code Snippets">[code snippets]</a></li>
+	  <li>In-Class Exercise 1b: <a href="/Z603/letter.jpeg" title="Document Encoding">Document Encoding in XML</a></li>
+	  <li>Homework 1: <a href="/Z603/hw1.html" title="Creating well-formed XML documents">Creating well-formed XML documents</a></li>
         </ul>
       </li>
       <li>2022-01-20: Class 2
