--- a/Z603/xmlreview.html
+++ b/Z603/xmlreview.html
@@ -20,6 +20,7 @@ date: 2021-01-28
     <li>Would you use this in a digital publishing system? For publishing what?</li>
   </ul>
   <p>In addition, please show a real-world example of one of these XML files and/or a project or system that uses them.</p>
+  <p>To maintain distancing, log in and share your screen in my Zoom room, which you can find on the home page of the Course's canvas site.</p>
   
 
 </div><!-- /.blurb -->
