--- a/Z603/class3.html
+++ b/Z603/class3.html
@@ -1,13 +1,13 @@
 ---
 layout: default
 title: "Class 3 Agenda"
-date: 2021-02-04
+date: 2022-01-27
 ---
 
 <h1>{{ page.title }}</h1>
 <div class="blurb">
   <p>First, we'll learn XPath by revisiting this <a href="/Z603/simple.xml">simple</a> XML document.</p>
-  <p>Next, we'll practice XPath in small groups using this XML document: <a href="http://purl.dlib.indiana.edu/iudl/vwwp/encodedtext/VAB7166">http://purl.dlib.indiana.edu/iudl/vwwp/encodedtext/VAB7166</a>.</p>
+  <p>Next, we'll practice XPath using this XML document: <a href="http://purl.dlib.indiana.edu/iudl/vwwp/encodedtext/VAB7166">http://purl.dlib.indiana.edu/iudl/vwwp/encodedtext/VAB7166</a>.</p>
   <p>We want to answer the following questions about this document:</p>
   <ol>
   <li>How many lines of poetry are there?</li>
