--- a/Z603/hw4.html
+++ b/Z603/hw4.html
@@ -1,13 +1,14 @@
 ---
 layout: default
 title: "XSLT Transformation #2"
-date: 2021-02-11
+date: 2021-02-03
 ---
 
 <h1>{{ page.title }}</h1>
 <div class="blurb">
-<p>Write an XSLT to scrape data from this <a href="journal-list.xml">edited HTML document</a>. I stripped out some non-well-formed content from <a href="https://www.cur.org/engage/undergraduate/journals/listing/">this webpage</a>.<p>
+<p>Write an XSLT to scrape data from this <a href="journal-list.xml">edited document</a>. I stripped out some non-well-formed content from <a href="https://www.cur.org/engage/undergraduate/journals/listing/">this webpage</a>.<p>
 <p>Your XSLT should extract a useful dataset of undergraduate research journals from what's not very useful in list form.<p>
+<p>Do not alter the source document! Use your XSLT skills to access the data you need.</p>
 <p>Your XSLT should do the following things:</p>
 <ol>
 <li>Handle all content via templates, either transforming into a new element or not carrying that content forward.</li>
