--- a/Z603/class4.html
+++ b/Z603/class4.html
@@ -8,6 +8,6 @@ date: 2022-02-03
 <div class="blurb">
   <p>First, we'll look for some examples of XML datasets found in <a href="https://tei-c.org/Activities/Projects/">Projects Using the TEI</a>. Try to find two projects that offer the ability to download their XML data, preferably a corpus of many documents.</p>
   <p>Next, we'll work on collecting a usable data set using XSLT and this <a href="/Z603/neko2.xml">source document</a>. [Original <a href="http://nekoatsume.wikia.com/wiki/Cats">webpage</a>]</p>
-  <p>After a break, we'll create a bunch of unique HTML pages using one XSLT.</p>
+  <p>After a break, we'll continue learning more XLST techniques.</p>
   <p>At the end of the class, we'll strategize how to do this week's <a href="/Z603/hw4.html">homework</a>.</p>
 </div><!-- /.blurb -->
