--- a/Z603/class5.html
+++ b/Z603/class5.html
@@ -1,14 +1,14 @@
 ---
 layout: default
 title: "Class 5 Agenda"
-date: 2021-02-18
+date: 2022-02-10
 ---
 
 <h1>{{ page.title }}</h1>
 <div class="blurb">
   <p>First, we'll talk about the readings a little bit.</p>
-  <p>Next, we'll finish our work on Neko Atsume cats by finishing an <a href="/Z603/neko_html_pages.xsl">XSLT that I started</a> to transform our <a href="/Z603/neko2data.xml">data set</a> into HTML pages.</p>
+  <p>Next, we'll finish our work on Neko Atsume cats by finishing an <a href="/Z603/inclass5.xsl">XSLT that I started</a> to transform our <a href="/Z603/transformed-cat-data-from-class-4.xml">data set</a> into HTML pages.</p>
   <p>After a break, we'll explore some more advanced XSLT concepts using a <a href="http://purl.dlib.indiana.edu/iudl/wright/VAC6669">TEI source document</a>.</p>
-  <p>We'll also learn about named templates, parameters, and modes using an <a href="/Z603/xslttips.xsl">example I created</a> to transform this <a href="/Z603/xslttips.xml">source document</a>.</p>
-  <p>At the end of the class, we'll strategize how to do this week's <a href="https://iu.instructure.com/courses/1948824/assignments/11681442">homework</a>.</p>
+  <p>If there's time we'll also learn about named templates, parameters, and modes using an <a href="/Z603/xslttips.xsl">example I created</a> to transform this <a href="/Z603/xslttips.xml">source document</a>.</p>
+  <p>At the end of the class, we'll strategize how to do this week's <a href="https://iu.instructure.com/courses/2035425/assignments/13144908">homework</a>.</p>
 </div><!-- /.blurb -->
