--- a/Z603/hw6.html
+++ b/Z603/hw6.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: "XQuery Homework"
-date: 2021-02-25
+date: 2022-02-17
 ---
 
 <h1>{{ page.title }}</h1>
@@ -10,7 +10,7 @@ date: 2021-02-25
 <ol>
 <li>What's the unique ID of each finding aid?</li>
 <li>What's the title of each finding aid?</li>
-<li>What's the number of years each finding aid covers (e.g., 1982-2000 = 18 years)?</li>
+<li>What's the number of years each finding aid covers (e.g., 1982-2000 = 2000 minus 1982 = 18 years)?</li>
 <li>What's the name of the person who encoded each finding aid?</li>
 <li>How many times was each finding aid changed?</li>
 <li>What's the physical extent of each finding aid?</li>
