--- a/Z603/class7.html
+++ b/Z603/class7.html
@@ -6,7 +6,7 @@ date: 2022-02-24
 
 <h1>{{ page.title }}</h1>
 <div class="blurb">
-  <p>First, we'll finish talking about XQuery and discuss your results from <a href="/Z603/class6.html">last week's activity</a>.</p>
+  <p>We'll start by learning our last bit of XSLT: named templates, parameters, and modes using an <a href="/Z603/xslttips.xsl">example I created</a> to transform this <a href="/Z603/xslttips.xml">source document</a>.</p>
   <p>Next, we'll do some exploration with EPUBs. You will need <a href="https://calibre-ebook.com/">Calibre</a> and <a href="https://www.docdataflow.com/ecancrusher/">eCanCrusher</a> on your computer.</p>
   <p>Here's an <a href="/Z603/make-epub.xsl">EPUB transformation</a> that we can walk through in order to transform this <a href="/Z603/VAA4025-001-1.xml">TEI document</a>. You will also need to download the <a href="/Z603/imh_issue.dtd">DTD</a> and put it in the same place as the TEI document. The <a href="/Z603/IMH-epub.epub">final product</a> is a functional EPUB.<p>
 </div><!-- /.blurb -->
