--- a/Z603/index.html
+++ b/Z603/index.html
@@ -33,7 +33,7 @@ title: ILS-Z603, Spring 2022
 	<ul>
 	  <li><a href="/Z603/class5.html" title="Class 5 Agenda">Class 5 Agenda</a></li>			
 	</ul>
-       </li><!-- -->
+       </li>
       <li>2022-02-17: Class 6
 	<ul>
 	  <li><a href="/Z603/class6.html" title="Class 6 Agenda">Class 6 Agenda</a></li>		
@@ -41,9 +41,13 @@ title: ILS-Z603, Spring 2022
 	</ul>	
       </li>
       <li>2022-02-24: Class 7
-	<!--<ul>
+	<ul>
 	  <li><a href="/Z603/class7.html" title="Class 7 Agenda">Class 7 Agenda</a></li>			
-	</ul>-->
+	</ul>
        </li>
-      <li>2022-03-03: Class 8</li>
-      </ul>
+      <li>2022-03-03: Class 8
+	      <ul>
+		      <li>Final Project Presentations</li>
+	      </ul>
+      </li>
+     </ul>
