--- a/iiif/index.html
+++ b/iiif/index.html
@@ -4,4 +4,4 @@ title: IIIF
 ---
 	<h1>{{ page.title }}</h1>
 <p>This area is for testing IIIF things.</p>
-<iframe src="https://uv-v4.netlify.app/uv.html#?manifest=https://nhomenda.github.io/iiif/test-iiif-collection.json" width="1000" height="750" frameborder="0"></iframe>
+<iframe src="https://uv-v4.netlify.app/uv.html#?manifest=https://nhomenda.github.io/iiif/test-iiif-collection.json" allowfullscreen frameborder="0"></iframe>
