--- a/projects/index.html
+++ b/projects/index.html
@@ -5,7 +5,7 @@ title: Projects
 
 <h1>{{ page.title }}</h1>
 	<ul class="posts">
-      <li>RMRS Memory Timeline
+      <li>RMRS Memory
 	<ul>
 	  <li><a href="/projects/rmrs.html" title="RMRS Memory Timeline">RMRS Memory Timeline</a></li>		
 	</ul>	
