--- a/projects/index.html
+++ b/projects/index.html
@@ -5,9 +5,9 @@ title: Projects
 
 <h1>{{ page.title }}</h1>
 	<ul class="posts">
-      <li>RMRS Memory
-	<ul>
-	  <li><a href="/projects/rmrs.html" title="RMRS Memory Timeline">RMRS Memory Timeline</a></li>		
-	</ul>	
-      </li>
-  </ul>
+		<li>Hyrax</li>
+		<li><a href="https://collections.libraries.indiana.edu/iulibraries" title="Indiana University Libraries Digital Exhibitions">Indiana University Libraries Digital Exhibitions</a></li>
+		<li><a href="https://digitalcollections.iu.edu/" title="Digital Collections, Indiana University">Digital Collections, Indiana University</a></li>
+		<li><a href="https://pages.dlib.indiana.edu/" title="Pages Online, Indiana University">Pages Online, Indiana University</a></li>
+		<li><a href="https://collections.libraries.indiana.edu/warof1812/" title="War of 1812 in the Collections of the Lilly Library, Indiana University">War of 1812 in the Collections of the Lilly Library, Indiana University</a></li>
+ 	 </ul>
